argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
spec:
  finalizers:
  - resources-finalizer.argocd.argoproj.io
