argocd/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: envoy-proxy
      namespace: envoy-gateway-system
  hostnames:
    - "argocd.jynolen.fr"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
